# dsa-hs

./: CHANGELOG.md  README.md  cabal.project  cabal.project.freeze  dsa-hs.cabal
app/: Main.hs
benchmarks/: Main.hs
benchmarks/DataStructures/: ArrayBench.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: dsa-hs-0.1.0.0-inplace.conf  package.cache
src/Algorithms/: BinarySearch.hs
src/DataStructures/: Array.hs  LinkedList.hs
test/: Main.hs
test/Algorithms/: BinarySearchSpec.hs
test/DataStructures/: ArraySpec.hs  LinkedListSpec.hs
